[package]
name = "half"
version = "2.6.0"
authors = ["Kathryn Long <squeeself@gmail.com>"]
description = "Half-precision floating point f16 and bf16 types for Rust implementing the IEEE 754-2008 standard binary16 and bfloat16 types."
repository = "https://github.com/VoidStarKat/half-rs"
readme = "README.md"
keywords = ["f16", "bfloat16", "no_std"]
license = "MIT OR Apache-2.0"
categories = ["no-std", "data-structures", "encoding"]
edition = "2021"
rust-version = "1.81"
exclude = [".git*", ".editorconfig", ".circleci"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []
use-intrinsics = [] # Deprecated and unused, but preserved if needed

[dependencies]
cfg-if = "1.0.0"
bytemuck = { version = "1.4.1", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
num-traits = { version = "0.2.16", default-features = false, features = ["libm"], optional = true }
zerocopy = { version = "0.8.23", default-features = false, features = ["derive"], optional = true }
rkyv = { version = "0.8.0", optional = true }
arbitrary = { version = "1.4.1", features = ["derive"], optional = true }

[target.'cfg(target_arch = "spirv")'.dependencies]
crunchy = "0.2.2"

[dev-dependencies]
criterion = "0.5"
quickcheck = "1.0"
quickcheck_macros = "1.0"
crunchy = "0.2.2"

[[bench]]
name = "convert"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
